# SpatialRust

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  deny.toml  rustfmt.toml
bench/pcl_comparison/: CMakeLists.txt  README.md  fetch_public_cloud.py  gen_cloud.py  pcl_bench.cpp  run.ps1  run.sh
bench/pcl_comparison/vcpkg-triplets/: x64-mingw-dynamic-release-bigobj.cmake
crates/spatialrust-ai/: Cargo.toml
crates/spatialrust-ai/benches/: onnxruntime.rs
crates/spatialrust-ai/src/: lib.rs  mock.rs  onnxruntime.rs
crates/spatialrust-arrow/: Cargo.toml
crates/spatialrust-arrow/src/: cdata.rs  device.rs  error.rs  lib.rs  stream.rs
crates/spatialrust-camera/: Cargo.toml
crates/spatialrust-camera/benches/: calibration.rs  rgbd.rs
crates/spatialrust-camera/src/: calibration.rs  distortion.rs  lib.rs  model.rs  rgbd.rs
crates/spatialrust-core/: Cargo.toml
crates/spatialrust-core/src/: algorithm.rs  buffer.rs  capabilities.rs  device.rs  error.rs  execution.rs  lib.rs  metadata.rs  pointcloud.rs  schema.rs  tensor.rs  tensor_aoso.rs
crates/spatialrust-distribute/: Cargo.toml
crates/spatialrust-distribute/src/: backpressure.rs  error.rs  graph.rs  lib.rs  transfer.rs
crates/spatialrust-episode/: Cargo.toml
crates/spatialrust-episode/src/: annotate.rs  augment.rs  episode.rs  error.rs  eval.rs  lib.rs  provenance.rs
crates/spatialrust-features/: Cargo.toml
crates/spatialrust-features/benches/: normals.rs
crates/spatialrust-features/src/: boundary.rs  estimator.rs  iss.rs  lib.rs  neighborhood.rs  normal.rs  normal_gpu.rs  orient.rs
crates/spatialrust-filtering/: Cargo.toml
crates/spatialrust-filtering/benches/: voxel_downsample.rs  voxel_downsample_attributes.rs
crates/spatialrust-filtering/src/: crop.rs  filter.rs  fps.rs  lib.rs  mls.rs  outlier.rs  voxel.rs
crates/spatialrust-gpu/: Cargo.toml
crates/spatialrust-gpu/benches/: aoso_frame_pipeline.rs  gpu_image_pipeline.rs  voxel_pipeline.rs
crates/spatialrust-gpu/src/: aoso_staging.rs  buffer.rs  device.rs  gpu_frame.rs  lib.rs  pipeline_cache.rs  readback.rs  runtime.rs  upload_cache.rs
crates/spatialrust-gpu/src/aoso_staging/: attributes.rs  normals.rs  tests.rs  types.rs  upload.rs  voxel.rs
crates/spatialrust-gpu/src/image/: ai_tensor.rs  gpu_image.rs  mod.rs  vision_chain.rs
crates/spatialrust-gpu/src/kernels/: covariances_grid.rs  euclidean_cluster.rs  gpu_segments.rs  mod.rs  normals.rs  normals_grid.rs  ransac_plane.rs  voxel_compact.rs  voxel_gather.rs  voxel_keys.rs  voxel_pipeline.rs  voxel_reduce.rs  voxel_segments.rs  voxel_segments_gpu.rs  voxel_sort.rs
crates/spatialrust-gpu/src/shaders/: voxel_compact.wgsl  voxel_gather.wgsl  voxel_gather_multi.wgsl  voxel_gather_multi4.wgsl  voxel_gather_u8.wgsl  voxel_gather_xyz.wgsl  (+11 more)
crates/spatialrust-image/: Cargo.toml
crates/spatialrust-image-io/: Cargo.toml
crates/spatialrust-image-io/benches/: decode.rs
crates/spatialrust-image-io/src/: lib.rs
crates/spatialrust-image/src/: lib.rs
crates/spatialrust-interchange/: Cargo.toml
crates/spatialrust-interchange/src/: error.rs  gltf.rs  lib.rs  usd.rs
crates/spatialrust-io/: Cargo.toml
crates/spatialrust-io/src/: error.rs  format.rs  lib.rs  options.rs  traits.rs
crates/spatialrust-io/tests/: copc_http_local.rs  pcd_smoke.rs
crates/spatialrust-mapping/: Cargo.toml
crates/spatialrust-mapping/src/: error.rs  lib.rs  motion.rs  pose_graph.rs  trajectory.rs  vision.rs
crates/spatialrust-metrics/: Cargo.toml
crates/spatialrust-metrics/src/: distance.rs  lib.rs
crates/spatialrust-pipeline/: Cargo.toml
crates/spatialrust-pipeline/benches/: mvp_composite_xyzirgb.rs  mvp_large_scale.rs  mvp_xyzinormal.rs  mvp_xyzinormal_approximate_auto.rs
crates/spatialrust-pipeline/src/: lib.rs  mvp.rs
crates/spatialrust-platform/: Cargo.toml
crates/spatialrust-platform/src/: budget.rs  conformance.rs  error.rs  gate.rs  lib.rs  lts.rs  security.rs  stability.rs  vision.rs  vision2.rs
crates/spatialrust-py/: Cargo.toml  README.md  pyproject.toml  spatialrust.pyi  stubtest_allowlist.txt
crates/spatialrust-py/examples/: end_to_end.py  make_gifs.py  ml_preprocess.py  pyg_pointnet_demo.py  register_scans.py  rgbd_pipeline.py  segment_room.py  video_tracking_e2e.py  vision_ai_pipeline.py
crates/spatialrust-py/src/: dlpack_capsule.rs  lib.rs
crates/spatialrust-py/tests/: test_bindings.py
crates/spatialrust-records/: Cargo.toml
crates/spatialrust-records/src/: error.rs  lib.rs  migrate.rs  record.rs  schema.rs  stream.rs
crates/spatialrust-registration/: Cargo.toml
crates/spatialrust-registration/benches/: registration.rs
crates/spatialrust-registration/src/: fpfh.rs  gicp.rs  icp.rs  kabsch.rs  lib.rs  ndt.rs  point_to_plane.rs  registration.rs  transform.rs
crates/spatialrust-runtime/: Cargo.toml
crates/spatialrust-runtime/benches/: execution_graph.rs
crates/spatialrust-runtime/src/: diagnostics.rs  error.rs  graph.rs  lib.rs  pipeline.rs  ros2.rs  trace.rs
crates/spatialrust-scene/: Cargo.toml
crates/spatialrust-scene/src/: error.rs  gaussian.rs  lib.rs  marching_cubes.rs  mesh.rs  surfel.rs  tsdf.rs
crates/spatialrust-search/: Cargo.toml
crates/spatialrust-search/src/: brute.rs  chunked.rs  graph.rs  kdtree.rs  lib.rs  parallel_chunked.rs  staging.rs  traits.rs  uniform_grid.rs
crates/spatialrust-segmentation/: Cargo.toml
crates/spatialrust-segmentation/src/: cloud.rs  cluster.rs  cluster_gpu.rs  dbscan.rs  ground.rs  lib.rs  multi_plane.rs  plane.rs  plane_gpu.rs  plane_ransac.rs  primitives.rs  region_growing.rs  segmenter.rs
crates/spatialrust-semantic/: Cargo.toml
crates/spatialrust-semantic/src/: embedding.rs  entity.rs  error.rs  lib.rs  search.rs
crates/spatialrust-sync/: Cargo.toml
crates/spatialrust-sync/src/: clock.rs  error.rs  frame_graph.rs  lib.rs  mcap_io.rs  replay.rs  stamped.rs
crates/spatialrust-tensor/: Cargo.toml
crates/spatialrust-tensor/benches/: image_bridge.rs
crates/spatialrust-tensor/src/: dlpack.rs  image.rs  lib.rs  spatial.rs
crates/spatialrust-tensor/tests/: properties.rs
(+329 files in other folders)
