[workspace]
members = [
    "crates/spatialrust",
    "crates/spatialrust-core",
    "crates/spatialrust-math",
    "crates/spatialrust-io",
    "crates/spatialrust-search",
    "crates/spatialrust-filtering",
    "crates/spatialrust-features",
    "crates/spatialrust-segmentation",
    "crates/spatialrust-registration",
    "crates/spatialrust-pipeline",
    "crates/spatialrust-gpu",
    "crates/spatialrust-metrics",
    "crates/spatialrust-transform",
    "crates/spatialrust-voxelize",
    "crates/spatialrust-image",
    "crates/spatialrust-image-io",
    "crates/spatialrust-tensor",
    "crates/spatialrust-ai",
    "crates/spatialrust-camera",
    "crates/spatialrust-vision",
    "crates/spatialrust-records",
    "crates/spatialrust-arrow",
    "crates/spatialrust-sync",
    "crates/spatialrust-mapping",
]
# spatialrust-py is a PyO3 cdylib built with maturin; keep it out of the Rust
# workspace so `cargo test --workspace` does not require a Python toolchain.
exclude = ["crates/spatialrust-py"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["SpatialRust Contributors"]
repository = "https://github.com/spatialrust/spatialrust"
rust-version = "1.75"
description = "Next-generation spatial computing framework for Rust"

[workspace.dependencies]
spatialrust-core = { path = "crates/spatialrust-core", version = "1.0.0" }
spatialrust-math = { path = "crates/spatialrust-math", version = "1.0.0" }
spatialrust-io = { path = "crates/spatialrust-io", version = "1.0.0" }
spatialrust-gpu = { path = "crates/spatialrust-gpu", version = "1.0.0" }
spatialrust-search = { path = "crates/spatialrust-search", version = "1.0.0" }
spatialrust-filtering = { path = "crates/spatialrust-filtering", version = "1.0.0" }
spatialrust-features = { path = "crates/spatialrust-features", version = "1.0.0" }
spatialrust-segmentation = { path = "crates/spatialrust-segmentation", version = "1.0.0" }
spatialrust-registration = { path = "crates/spatialrust-registration", version = "1.0.0" }
spatialrust-pipeline = { path = "crates/spatialrust-pipeline", version = "1.0.0" }
spatialrust-metrics = { path = "crates/spatialrust-metrics", version = "1.0.0", default-features = false }
spatialrust-transform = { path = "crates/spatialrust-transform", version = "1.0.0", default-features = false }
spatialrust-voxelize = { path = "crates/spatialrust-voxelize", version = "1.0.0", default-features = false }
spatialrust-image = { path = "crates/spatialrust-image", version = "1.0.0" }
spatialrust-image-io = { path = "crates/spatialrust-image-io", version = "1.0.0", default-features = false }
spatialrust-tensor = { path = "crates/spatialrust-tensor", version = "1.0.0", default-features = false }
spatialrust-ai = { path = "crates/spatialrust-ai", version = "1.0.0", default-features = false }
spatialrust-camera = { path = "crates/spatialrust-camera", version = "1.0.0" }
spatialrust-vision = { path = "crates/spatialrust-vision", version = "1.0.0", default-features = false }
spatialrust-records = { path = "crates/spatialrust-records", version = "1.0.0" }
spatialrust-arrow = { path = "crates/spatialrust-arrow", version = "1.0.0", default-features = false }
spatialrust-sync = { path = "crates/spatialrust-sync", version = "1.0.0", default-features = false }
spatialrust-mapping = { path = "crates/spatialrust-mapping", version = "1.0.0", default-features = false }

bytemuck = { version = "1", features = ["derive"] }
las = "0.9"
e57 = "0.11"
copc-streaming = "0.1.5"
copc-core = "0.2.0"
copc-writer = "0.2.0"
pollster = "0.4"
ureq = "2.12"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
wgpu = "24"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
image = { version = "0.24.9", default-features = false }
kamadak-exif = "0.6.1"
exr = { version = "=1.72.0", default-features = false }
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
