[package]
name = "spatialrust-camera"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Camera models and RGB-D point cloud conversion for SpatialRust"

[features]
default = []

[dependencies]
spatialrust-core.workspace = true
spatialrust-image.workspace = true
spatialrust-math.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "rgbd"
harness = false
