[package]
name = "spatialrust-distribute"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Explicit edge/distributed execution graphs and named transfers for SpatialRust"

[features]
default = []

[dependencies]
spatialrust-core.workspace = true
thiserror.workspace = true
