[package]
name = "spatialrust-features"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Feature estimation for SpatialRust point clouds"

[features]
default = ["feature-normal"]
feature-normal = []
feature-normal-gpu = ["feature-normal", "dep:spatialrust-gpu"]

[dependencies]
spatialrust-core = { workspace = true }
spatialrust-math = { workspace = true }
spatialrust-search = { workspace = true, features = ["search-kdtree"] }
spatialrust-gpu = { workspace = true, optional = true, features = ["gpu-wgpu"] }

[dev-dependencies]
spatialrust-core = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "normals"
harness = false
required-features = ["feature-normal-gpu"]
