[package]
name = "spatialrust-image"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Typed image buffers and zero-copy image views for SpatialRust"

[features]
default = []

[dependencies]
thiserror.workspace = true
