[package]
name = "spatialrust-interchange"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "glTF and OpenUSD scene interchange adapters for SpatialRust"

[features]
default = []
gltf = []
openusd = []
full = ["gltf", "openusd"]

[dependencies]
spatialrust-scene.workspace = true
spatialrust-math.workspace = true
thiserror.workspace = true
