[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "spatialrust"
description = "PyTorch for Spatial Computing — native-Rust point cloud processing for Python"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "SpatialRust Contributors" }]
keywords = ["point-cloud", "lidar", "copc", "voxel", "ransac", "icp", "gpu", "wgpu"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.21"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/rsasaki0109/SpatialRust"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "spatialrust"
