[package]
name = "spatialrust-records"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Versioned spatial records, schema evolution, and chunked streams for SpatialRust"

[features]
default = []

[dependencies]
spatialrust-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
