[package]
name = "spatialrust-registration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Point cloud registration for SpatialRust"

[features]
default = ["register-icp"]
register-icp = ["dep:spatialrust-search"]
register-icp-point-to-plane = ["dep:spatialrust-search"]
register-gicp = ["dep:spatialrust-search"]
register-ndt = []

[dependencies]
spatialrust-core = { workspace = true }
spatialrust-math = { workspace = true }
spatialrust-search = { workspace = true, optional = true, features = ["search-kdtree"] }

[dev-dependencies]
spatialrust-core = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "registration"
harness = false
required-features = [
    "register-icp",
    "register-icp-point-to-plane",
    "register-gicp",
    "register-ndt",
]
