[package]
name = "spatialrust-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Bounded robotics pipelines, tracing, and ROS 2 adaptation contracts for SpatialRust"

[features]
default = []
ros2 = []
execution-graph = ["dep:spatialrust-distribute"]

[dependencies]
spatialrust-core.workspace = true
spatialrust-sync.workspace = true
spatialrust-distribute = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "execution_graph"
harness = false
required-features = ["execution-graph"]
