[package]
name = "spatialrust-search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Spatial search structures for SpatialRust"

[features]
default = ["search-kdtree"]
search-kdtree = []
search-graph = ["search-kdtree"]
parallel = []

[dependencies]
spatialrust-core = { workspace = true }
spatialrust-math = { workspace = true }

[dev-dependencies]
spatialrust-core = { workspace = true }
