[package]
name = "spatialrust-segmentation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Point cloud segmentation for SpatialRust"

[features]
default = ["segment-ransac-plane", "segment-euclidean"]
segment-ransac-plane = []
segment-euclidean = ["dep:spatialrust-search"]
segment-region-growing = ["dep:spatialrust-search"]

[dependencies]
spatialrust-core = { workspace = true }
spatialrust-math = { workspace = true }
spatialrust-search = { workspace = true, optional = true, features = ["search-kdtree"] }

[dev-dependencies]
spatialrust-core = { workspace = true }
